fix: Fix loading gif position on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ ul {
 
 #neighbourhood_list {
   margin: 5px 0 0 0;
-  height: 100%;
+  height: calc(100% - 75px);
   overflow-y: auto;
   padding-left: 5px;
 }
@@ -125,5 +125,5 @@ ul {
 
 #loading {
   text-align: center;
-  margin-top: 20vh;
+  margin-top: 25%;
 }
